--- a/helloworld/CMakeLists.txt
+++ b/helloworld/CMakeLists.txt
@@ -10,3 +10,9 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_executable(helloworld.o helloworld.cpp)
 target_link_libraries(helloworld.o ${OpenCV_LIBS})
+
+add_custom_target(run
+    COMMAND helloworld.o
+    DEPENDS helloworld.o
+    WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
+)
