hist: removed log10

--- a/examples/ex_gui_imageblending/CMakeLists.txt
+++ b/examples/ex_gui_imageblending/CMakeLists.txt
@@ -8,12 +8,12 @@ message("opencv version: " ${OpenCV_VERSION})
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(ex_gui_imageblending.o ex_gui_imageblending.cpp)
+add_executable(ex_gui_imageblending ex_gui_imageblending.cpp)
 
-target_link_libraries(ex_gui_imageblending.o ${OpenCV_LIBS})
+target_link_libraries(ex_gui_imageblending ${OpenCV_LIBS})
 
 add_custom_target(run
-    COMMAND ex_gui_imageblending.o
-    DEPENDS ex_gui_imageblending.o
+    COMMAND ex_gui_imageblending
+    DEPENDS ex_gui_imageblending
     WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
